updated gitignore and working on creating tables and inserting data functions

--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+db_utils/.env
 
 # Spyder project settings
 .spyderproject
@@ -165,8 +166,9 @@ cython_debug/
 data/
 
 rest_api/.env
-
 rest_api/config.py
+db_utils/config.py
+config.py
 
 # terraform folder ignore
 terraform.tfstate
@@ -184,3 +186,5 @@ tfplan
 !main.tf
 
 variables.tf
+
+config.py
