--- a/lambdas/s3_recipe_scraper/requirements.txt
+++ b/lambdas/s3_recipe_scraper/requirements.txt
@@ -1,5 +1,8 @@
 python-dotenv==1.0.0
-requests==2.31.0 
-pandas==2.0.3 
+httpx==0.25.2
+recipe_scrapers==14.44.1
 boto3==1.28.42 
 s3fs==2023.10.0
+
+# pandas==2.0.3 
+# requests==2.31.0 
