--- a/lambda_containers/extract_ingredients_lambda/requirements.txt
+++ b/lambda_containers/extract_ingredients_lambda/requirements.txt
@@ -1,3 +1,14 @@
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==2.1.2+cpu
+transformers==4.36.2
+urllib3==1.25.11
+s3fs==2023.10.0
+pandas==2.0.3 
+numpy==1.24.4
+s3fs==2023.10.0
+
+######### 
+
 # # transformers[torch]==4.36.2
 # transformers==4.36.2
 # urllib3==1.25.11
@@ -9,10 +20,3 @@
 # transformers==4.36.2
 # urllib3==1.25.11
 # torch==2.1.2
-
-
-	
--f https://download.pytorch.org/whl/torch_stable.html
-torch==2.1.2+cpu
-transformers==4.36.2
-urllib3==1.25.11
