updated package lambdas script to remove unneeded files installed from pip, changes to recipe scraper lambda code, the model lambda code, and the batching/messaging process with SQS and lambda, decreased number of executions and increased message batch size

--- a/lambda_containers/extract_ingredients_lambda/Dockerfile
+++ b/lambda_containers/extract_ingredients_lambda/Dockerfile
@@ -71,8 +71,14 @@ COPY extract_ingredients_lambda.py ./
 # Create a model directory
 RUN mkdir model
 
+# set TRANSFORMERS_CACHE to /tmp
+ENV TRANSFORMERS_CACHE=/tmp
+
 # Download and save the model from HuggingFace
 RUN python3 - <<EOF
+import os
+os.environ["TRANSFORMERS_CACHE"] = "/tmp"
+
 from transformers import DistilBertForTokenClassification
 
 # HuggingFace path to model
